# arkive-api

./: .gitignore  README.md  db_schema.sql  flake.nix  pyproject.toml
arkive_api/: api.py  archivers.py  db.py  logging.py  utils.py
nixos/: default.nix
tests/: test_arkive_api.py
