[tool.poetry]
name = "arkive-api"
version = "0.0.1"
description = ""
authors = ["xamogast <mate@lambd.ax>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
waybackpy = "^3.0.6"
fastapi = {version = "^0.75.2"}
starlette = {version = "0.17.1", extras = ["all"]}

[tool.poetry.scripts]
dev = "arkive_api.api:dev"
prod = "arkive_api.api:prod"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
